Updated command responses

--- a/tests/test_cases/2020/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -32,8 +32,8 @@ test_cases:
   response: |-
     629F1101662DBE40000
     629F121000000000000
-    629F122000003030303
-    629F1230064646464FF
+    629F122000001020101
+    629F1230364646464FF
 - expected_values:
     MINI_FL_SPD: 0
     MINI_FR_SPD: 0
@@ -43,17 +43,17 @@ test_cases:
     629F1101662DBE40000
     629F121000000000000
     629F122000003030303
-    629F1230364646464FF
+    629F1230064646464FF
 - expected_values:
     MINI_FL_SPD: 0.13
-    MINI_FR_SPD: 0.12
+    MINI_FR_SPD: 0.11
     MINI_RL_SPD: 0.13
     MINI_RR_SPD: 0.15
   response: |-
     629F1101662DBE4000D
-    629F121000C000D000F
-    629F122000002020202
-    629F1230264646464FF
+    629F121000B000D000F
+    629F122000002010202
+    629F1230364646464FF
 - expected_values:
     MINI_FL_SPD: 0
     MINI_FR_SPD: 0
@@ -79,6 +79,20 @@ test_cases:
     629F12200C801010101
     629F1230164646464FF
 - expected_values:
+    MINI_FL_SPD: 14.43
+    MINI_FR_SPD: 15.58
+    MINI_RL_SPD: 14.22
+    MINI_RR_SPD: 15.34
+  response: |-
+    629F1101662DBE4051B
+    629F121051004B404F5
+    629F12204B001010101
+    629F1230164646464FF
+    629F1101662DBE405A3
+    629F1210616058E05FE
+    629F122057801010101
+    629F1230164646464FF
+- expected_values:
     MINI_FL_SPD: 20.72
     MINI_FR_SPD: 23.18
     MINI_RL_SPD: 20.55
@@ -87,6 +101,16 @@ test_cases:
     629F1101662DBE40818
     629F121090E08070905
     629F12208FC01010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 40.23
+    MINI_FR_SPD: 40.89
+    MINI_RL_SPD: 39.93
+    MINI_RR_SPD: 40.78
+  response: |-
+    629F1101662DBE40FB7
+    629F1210FF90F990FEE
+    629F1220FA001010101
     629F1230164646464FF
 - expected_values:
     MINI_FL_SPD: 40.34
@@ -99,13 +123,13 @@ test_cases:
     629F1220FA001010101
     629F1230164646464FF
 - expected_values:
-    MINI_FL_SPD: 40.75
-    MINI_FR_SPD: 40.82
-    MINI_RL_SPD: 40.82
-    MINI_RR_SPD: 40.81
+    MINI_FL_SPD: 40.65
+    MINI_FR_SPD: 40.62
+    MINI_RL_SPD: 40.89
+    MINI_RR_SPD: 40.7
   response: |-
-    629F1101662DBE40FEB
-    629F1210FF20FF20FF1
+    629F1101662DBE40FE1
+    629F1210FDE0FF90FE6
     629F1220FA001010101
     629F1230164646464FF
 - expected_values:
@@ -121,6 +145,20 @@ test_cases:
     629F1101662DBE4100F
     629F121100E10121009
     629F122100401010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 89.08
+    MINI_FR_SPD: 89.27
+    MINI_RL_SPD: 88.89
+    MINI_RR_SPD: 88.97
+  response: |-
+    629F1101662DBE422E3
+    629F121230322D922FA
+    629F12222C401010101
+    629F1230164646464FF
+    629F1101662DBE422CC
+    629F12122DF22B922C1
+    629F12222C401010101
     629F1230164646464FF
 - expected_values:
     MINI_FL_SPD: 122.91
@@ -167,12 +205,22 @@ test_cases:
     629F12230D401010101
     629F1230164646464FF
 - expected_values:
-    MINI_FL_SPD: 146.41
-    MINI_FR_SPD: 146.47
-    MINI_RL_SPD: 145.75
-    MINI_RR_SPD: 145.69
+    MINI_FL_SPD: 148.5
+    MINI_FR_SPD: 148.38
+    MINI_RL_SPD: 147.76
+    MINI_RR_SPD: 147.59
   response: |-
-    629F1101662DBE43931
-    629F121393738EF38E9
-    629F122390801010101
+    629F1101662DBE43A02
+    629F12139F639B839A7
+    629F122396C01010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 149.65
+    MINI_FR_SPD: 149.41
+    MINI_RL_SPD: 149.13
+    MINI_RR_SPD: 149.07
+  response: |-
+    629F1101662DBE43A75
+    629F1213A5D3A413A3B
+    629F1223A3401010101
     629F1230164646464FF
