--- a/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -1,6 +1,14 @@
 command_id: 6F1.660.22D10D|e=60,fc=1
 test_cases:
 - expected_values:
+    MINI_ODO1: 44543
+    MINI_ODO2: 44543
+  response: |-
+    660F10562D1070000
+    660F10562D1127070
+    660F1100B62D10D0000
+    660F121ADFF0000ADFF
+- expected_values:
     MINI_ODO1: 43606
     MINI_ODO2: 43606
   response: |-
@@ -22,6 +30,21 @@ test_cases:
     660F1100B62D10D0000
     660F121AAB00000AAB0
 - expected_values:
+    MINI_ODO1: 44662
+    MINI_ODO2: 44662
+  response: |-
+    660F10562D1070124
+    660F10562D1127474
+    660F1100B62D10D0000
+    660F121AE760000AE76
+- expected_values:
+    MINI_ODO1: 44729
+    MINI_ODO2: 44729
+  response: |-
+    660F10562D10701D3
+    660F1100B62D10D0000
+    660F121AEB90000AEB9
+- expected_values:
     MINI_ODO1: 43689
     MINI_ODO2: 43689
   response: |-
@@ -32,6 +55,30 @@ test_cases:
     660F1100B62D10D0000
     660F121AAA90000AAA9
     660F10562D1127373
+- expected_values:
+    MINI_ODO1: 44946
+    MINI_ODO2: 44946
+  response: |-
+    660F10562D107025F
+    660F1100B62D10D0000
+    660F121AF920000AF92
+    660F10562D1127F80
+    660F1100F62D111017C
+    660F121053C0190FFFF
+    660F12249A80061FFFF
+    660F10562D1070235
+    660F1100B62D10D0000
+    660F121AF920000AF92
+- expected_values:
+    MINI_ODO1: 45495
+    MINI_ODO2: 45495
+  response: |-
+    660F10562D1070316
+    660F1100F62D11103FC
+    660F12105820456FFFF
+    660F12243A50053FFFF
+    660F1100B62D10D0000
+    660F121B1B70000B1B7
 - expected_values:
     MINI_ODO1: 42431
     MINI_ODO2: 42431
@@ -69,23 +116,35 @@ test_cases:
     660F1100B62D10D0000
     660F121A44D0000A44D
 - expected_values:
-    MINI_ODO1: 41738
-    MINI_ODO2: 41738
+    MINI_ODO1: 45422
+    MINI_ODO2: 45422
   response: |-
+    660F10562D1127070
+    660F10562D107017A
+    660F10562D107017C
     660F1100B62D10D0000
-    660F121A30A0000A30A
+    660F121B16E0000B16E
 - expected_values:
-    MINI_ODO1: 41743
-    MINI_ODO2: 41743
+    MINI_ODO1: 45043
+    MINI_ODO2: 45043
   response: |-
+    660F10562D1128185
+    660F1100F62D111062C
+    660F121062C062CFFFF
+    660F1223D110054FFFF
     660F1100B62D10D0000
-    660F121A30F0000A30F
+    660F121AFF30000AFF3
 - expected_values:
-    MINI_ODO1: 41744
-    MINI_ODO2: 41744
+    MINI_ODO1: 44984
+    MINI_ODO2: 44984
   response: |-
+    660F10562D112848E
+    660F10562D1070000
+    660F1100F62D1110424
+    660F12105A004BAFFFF
+    660F12240CF006BFFFF
     660F1100B62D10D0000
-    660F121A3100000A310
+    660F121AFB80000AFB8
 - expected_values:
     MINI_ODO1: 42432
     MINI_ODO2: 42432
@@ -114,8 +173,113 @@ test_cases:
     660F1100B62D10D0000
     660F121AB980000AB98
 - expected_values:
-    MINI_ODO1: 44259
-    MINI_ODO2: 44259
+    MINI_ODO1: 44720
+    MINI_ODO2: 44720
   response: |-
     660F1100B62D10D0000
-    660F121ACE30000ACE3
+    660F121AEB00000AEB0
+- expected_values:
+    MINI_ODO1: 44767
+    MINI_ODO2: 44767
+  response: |-
+    660F1100B62D10D0000
+    660F121AEDF0000AEDF
+- expected_values:
+    MINI_ODO1: 44803
+    MINI_ODO2: 44803
+  response: |-
+    660F1100B62D10D0000
+    660F121AF030000AF03
+    660F1100F62D1110334
+    660F12105FA035CFFFF
+    660F1223BE7005CFFFF
+    660F10562D1127374
+    660F10562D10700C8
+    660F1100B62D10D0000
+    660F121AF030000AF03
+- expected_values:
+    MINI_ODO1: 44849
+    MINI_ODO2: 44849
+  response: |-
+    660F1100B62D10D0000
+    660F121AF310000AF31
+    660F10562D1127676
+    660F1100B62D10D0000
+    660F121AF310000AF31
+- expected_values:
+    MINI_ODO1: 44984
+    MINI_ODO2: 44984
+  response: |-
+    660F1100B62D10D0000
+    660F121AFB80000AFB8
+    660F1100B62D10D0000
+    660F121AFB80000AFB8
+- expected_values:
+    MINI_ODO1: 45053
+    MINI_ODO2: 45053
+  response: |-
+    660F1100B62D10D0000
+    660F121AFFD0000AFFD
+- expected_values:
+    MINI_ODO1: 45056
+    MINI_ODO2: 45056
+  response: |-
+    660F1100B62D10D0000
+    660F121B0000000B000
+- expected_values:
+    MINI_ODO1: 45090
+    MINI_ODO2: 45090
+  response: |-
+    660F1100B62D10D0000
+    660F121B0220000B022
+    660F1100B62D10D0000
+    660F121B0220000B022
+- expected_values:
+    MINI_ODO1: 45223
+    MINI_ODO2: 45223
+  response: |-
+    660F1100B62D10D0000
+    660F121B0A70000B0A7
+- expected_values:
+    MINI_ODO1: 46725
+    MINI_ODO2: 46725
+  response: |-
+    660F1100B62D10D0000
+    660F121B6850000B685
+    660F10562D1126B6C
+    660F10562D1070211
+    660F1100F62D11105F0
+    660F12106860622FFFF
+    660F1223D970049FFFF
+    660F1100B62D10D0000
+    660F121B6850000B685
+- expected_values:
+    MINI_ODO1: 47015
+    MINI_ODO2: 47015
+  response: |-
+    660F1100B62D10D0000
+    660F121B7A70000B7A7
+    660F10562D10700A0
+    660F10562D10700A2
+    660F1100B62D10D0000
+    660F121B7A70000B7A7
+- expected_values:
+    MINI_ODO1: 45412
+    MINI_ODO2: 45412
+  response: |-
+    660F1100F62D111023A
+    660F12104BA024EFFFF
+    660F12251AD005CFFFF
+    660F10562D1127272
+    660F1100B62D10D0000
+    660F121B1640000B164
+- expected_values:
+    MINI_ODO1: 44278
+    MINI_ODO2: 44278
+  response: |-
+    660F1100F62D1110492
+    660F12105820492FFFF
+    660F12244390055FFFF
+    660F10562D112819D
+    660F1100B62D10D0000
+    660F121ACF60000ACF6
