--- a/tests/test_cases/2020/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -1,6 +1,19 @@
 command_id: 6F1.660.22D111|e=60,fc=1
 test_cases:
 - expected_values:
+    MINI_AUX_PWR: 1
+    MINI_RANGE_E_CUR: 100
+    MINI_RANGE_E_MAX: 136
+    MINI_RANGE_E_USE: 17.36
+    MINI_RANGE_F_CUR: 103
+  response: |-
+    660F10562D1070000
+    660F1100B62D10D0000
+    660F121B28E0000B28E
+    660F1100F62D11103E8
+    660F12105500406FFFF
+    660F12243D00064FFFF
+- expected_values:
     MINI_AUX_PWR: 0.99
     MINI_RANGE_E_CUR: 121
     MINI_RANGE_E_MAX: 147
@@ -12,6 +25,62 @@ test_cases:
     660F1100F62D11104BA
     660F12105BE055AFFFF
     660F12242A00063FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.89
+    MINI_RANGE_E_CUR: 20
+    MINI_RANGE_E_MAX: 142
+    MINI_RANGE_E_USE: 17.611
+    MINI_RANGE_F_CUR: 20
+  response: |-
+    660F10562D1126F70
+    660F1100F62D11100C8
+    660F121058C00C8FFFF
+    660F12244CB0059FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.63
+    MINI_RANGE_E_CUR: 51
+    MINI_RANGE_E_MAX: 150
+    MINI_RANGE_E_USE: 16.877
+    MINI_RANGE_F_CUR: 53
+  response: |-
+    660F10562D1127172
+    660F1100F62D11101FE
+    660F12105DC0212FFFF
+    660F12241ED003FFFFF
+    660F1100B62D10D0000
+    660F121B1B30000B1B3
+    660F10562D1070000
+    660F10562D1127172
+    660F1100F62D11101FE
+    660F12105DC0212FFFF
+    660F12241ED003FFFFF
+- expected_values:
+    MINI_AUX_PWR: 0.88
+    MINI_RANGE_E_CUR: 83
+    MINI_RANGE_E_MAX: 155
+    MINI_RANGE_E_USE: 15.251
+    MINI_RANGE_F_CUR: 87
+  response: |-
+    660F10562D1127373
+    660F1100B62D10D0000
+    660F121AF010000AF01
+    660F1100F62D111033E
+    660F121060E0366FFFF
+    660F1223B930058FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.94
+    MINI_RANGE_E_CUR: 72
+    MINI_RANGE_E_MAX: 145
+    MINI_RANGE_E_USE: 18.089
+    MINI_RANGE_F_CUR: 76
+  response: |-
+    660F10562D1127374
+    660F1100B62D10D0000
+    660F121B1D90000B1D9
+    660F10562D10701E0
+    660F1100F62D11102D0
+    660F12105AA02F8FFFF
+    660F12246A9005EFFFF
 - expected_values:
     MINI_AUX_PWR: 0.84
     MINI_RANGE_E_CUR: 97
@@ -45,6 +114,33 @@ test_cases:
     660F1100F62D1110546
     660F121055A060EFFFF
     660F12245A60059FFFF
+- expected_values:
+    MINI_AUX_PWR: 1.15
+    MINI_RANGE_E_CUR: 33
+    MINI_RANGE_E_MAX: 139
+    MINI_RANGE_E_USE: 16.168
+    MINI_RANGE_F_CUR: 41
+  response: |-
+    660F10562D1127F7F
+    660F1100B62D10D0000
+    660F121AE8D0000AE8D
+    660F1100F62D111014A
+    660F121056E019AFFFF
+    660F1223F280073FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.91
+    MINI_RANGE_E_CUR: 131
+    MINI_RANGE_E_MAX: 149
+    MINI_RANGE_E_USE: 15.792
+    MINI_RANGE_F_CUR: 143
+  response: |-
+    660F10562D1128084
+    660F1100B62D10D0000
+    660F121B0D60000B0D6
+    660F10562D1070000
+    660F1100F62D111051E
+    660F12105D20596FFFF
+    660F1223DB0005BFFFF
 - expected_values:
     MINI_AUX_PWR: 0.77
     MINI_RANGE_E_CUR: 127
@@ -86,6 +182,116 @@ test_cases:
     660F121058C0398FFFF
     660F122429A005CFFFF
 - expected_values:
+    MINI_AUX_PWR: 0.95
+    MINI_RANGE_E_CUR: 52
+    MINI_RANGE_E_MAX: 143
+    MINI_RANGE_E_USE: 17.208
+    MINI_RANGE_F_CUR: 55
+  response: |-
+    660F1100B62D10D0000
+    660F121AD3D0000AD3D
+    660F1100F62D1110208
+    660F12105960226FFFF
+    660F1224338005FFFFF
+- expected_values:
+    MINI_AUX_PWR: 0.87
+    MINI_RANGE_E_CUR: 56
+    MINI_RANGE_E_MAX: 148
+    MINI_RANGE_E_USE: 17.003
+    MINI_RANGE_F_CUR: 58
+  response: |-
+    660F1100B62D10D0000
+    660F121ADE80000ADE8
+    660F10562D107020C
+    660F10562D1127E7F
+    660F1100F62D1110230
+    660F12105C80244FFFF
+    660F122426B0057FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.89
+    MINI_RANGE_E_CUR: 59
+    MINI_RANGE_E_MAX: 148
+    MINI_RANGE_E_USE: 16.639
+    MINI_RANGE_F_CUR: 61
+  response: |-
+    660F1100B62D10D0000
+    660F121AE7A0000AE7A
+    660F10562D1127274
+    660F1100F62D111024E
+    660F12105C80262FFFF
+    660F12240FF0059FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.87
+    MINI_RANGE_E_CUR: 84
+    MINI_RANGE_E_MAX: 148
+    MINI_RANGE_E_USE: 16.262
+    MINI_RANGE_F_CUR: 88
+  response: |-
+    660F1100B62D10D0000
+    660F121AF2F0000AF2F
+    660F10562D1127676
+    660F1100F62D1110348
+    660F12105C80370FFFF
+    660F1223F860057FFFF
+- expected_values:
+    MINI_AUX_PWR: 1
+    MINI_RANGE_E_CUR: 106
+    MINI_RANGE_E_MAX: 146
+    MINI_RANGE_E_USE: 16.47
+    MINI_RANGE_F_CUR: 121
+  response: |-
+    660F1100B62D10D0000
+    660F121AFBA0000AFBA
+    660F10562D112868C
+    660F1100F62D1110424
+    660F12105B404BAFFFF
+    660F12240560064FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.88
+    MINI_RANGE_E_CUR: 65
+    MINI_RANGE_E_MAX: 127
+    MINI_RANGE_E_USE: 19.413
+    MINI_RANGE_F_CUR: 65
+  response: |-
+    660F1100B62D10D0000
+    660F121B15E0000B15E
+    660F1100F62D111028A
+    660F12104F6028AFFFF
+    660F1224BD50058FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.8
+    MINI_RANGE_E_CUR: 65
+    MINI_RANGE_E_MAX: 145
+    MINI_RANGE_E_USE: 18.281
+    MINI_RANGE_F_CUR: 66
+  response: |-
+    660F1100B62D10D0000
+    660F121B1760000B176
+    660F10562D1070096
+    660F10562D1126D6E
+    660F1100F62D111028A
+    660F12105AA0294FFFF
+    660F12247690050FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.85
+    MINI_RANGE_E_CUR: 128
+    MINI_RANGE_E_MAX: 144
+    MINI_RANGE_E_USE: 16.57
+    MINI_RANGE_F_CUR: 128
+  response: |-
+    660F1100B62D10D0000
+    660F121B2770000B277
+    660F1100F62D1110500
+    660F12105A00500FFFF
+    660F12240BA0055FFFF
+    660F10562D1070007
+    660F10562D1127474
+    660F1100F62D1110500
+    660F12105A00500FFFF
+    660F12240BA0055FFFF
+    660F1100B62D10D0000
+    660F121B2770000B277
+- expected_values:
     MINI_AUX_PWR: 0.63
     MINI_RANGE_E_CUR: 5
     MINI_RANGE_E_MAX: 148
@@ -95,6 +301,16 @@ test_cases:
     660F1100F62D1110032
     660F12105C8003CFFFF
     660F122471D003FFFFF
+- expected_values:
+    MINI_AUX_PWR: 0.89
+    MINI_RANGE_E_CUR: 11
+    MINI_RANGE_E_MAX: 173
+    MINI_RANGE_E_USE: 14.963
+    MINI_RANGE_F_CUR: 12
+  response: |-
+    660F1100F62D111006E
+    660F12106C20078FFFF
+    660F1223A730059FFFF
 - expected_values:
     MINI_AUX_PWR: 0.81
     MINI_RANGE_E_CUR: 16
@@ -115,6 +331,16 @@ test_cases:
     660F1100F62D11100D2
     660F12105BE010EFFFF
     660F1224400006AFFFF
+- expected_values:
+    MINI_AUX_PWR: 1.06
+    MINI_RANGE_E_CUR: 23
+    MINI_RANGE_E_MAX: 144
+    MINI_RANGE_E_USE: 16.186
+    MINI_RANGE_F_CUR: 24
+  response: |-
+    660F1100F62D11100E6
+    660F12105A000F0FFFF
+    660F1223F3A006AFFFF
 - expected_values:
     MINI_AUX_PWR: 0.97
     MINI_RANGE_E_CUR: 38
@@ -166,6 +392,16 @@ test_cases:
     660F12104380384FFFF
     660F1225A400059FFFF
 - expected_values:
+    MINI_AUX_PWR: 1.23
+    MINI_RANGE_E_CUR: 64
+    MINI_RANGE_E_MAX: 142
+    MINI_RANGE_E_USE: 16.434
+    MINI_RANGE_F_CUR: 69
+  response: |-
+    660F1100F62D1110280
+    660F121058C02B2FFFF
+    660F1224032007BFFFF
+- expected_values:
     MINI_AUX_PWR: 1.78
     MINI_RANGE_E_CUR: 77
     MINI_RANGE_E_MAX: 121
@@ -176,15 +412,22 @@ test_cases:
     660F12104BA0370FFFF
     660F122467100B2FFFF
 - expected_values:
-    MINI_AUX_PWR: 1.01
-    MINI_RANGE_E_CUR: 77
-    MINI_RANGE_E_MAX: 136
-    MINI_RANGE_E_USE: 18.118
-    MINI_RANGE_F_CUR: 88
+    MINI_AUX_PWR: 0.92
+    MINI_RANGE_E_CUR: 79
+    MINI_RANGE_E_MAX: 137
+    MINI_RANGE_E_USE: 17.995
+    MINI_RANGE_F_CUR: 84
   response: |-
-    660F1100F62D1110302
-    660F12105500370FFFF
-    660F12246C60065FFFF
+    660F1100F62D1110316
+    660F121055A0348FFFF
+    660F122464B005CFFFF
+    660F10562D1127171
+    660F10562D107024E
+    660F1100F62D1110316
+    660F121055A0348FFFF
+    660F122464B005CFFFF
+    660F1100B62D10D0000
+    660F121AF630000AF63
 - expected_values:
     MINI_AUX_PWR: 0.85
     MINI_RANGE_E_CUR: 81
@@ -196,6 +439,55 @@ test_cases:
     660F12105A0038EFFFF
     660F12243BD0055FFFF
 - expected_values:
+    MINI_AUX_PWR: 1.13
+    MINI_RANGE_E_CUR: 90
+    MINI_RANGE_E_MAX: 140
+    MINI_RANGE_E_USE: 16.674
+    MINI_RANGE_F_CUR: 120
+  response: |-
+    660F1100F62D1110384
+    660F121057804B0FFFF
+    660F12241220071FFFF
+    660F10562D1128585
+    660F10562D10701C9
+    660F1100F62D1110384
+    660F121057804B0FFFF
+    660F12241220071FFFF
+    660F1100B62D10D0000
+    660F121B2300000B230
+    660F10562D1128585
+    660F10562D10701D4
+- expected_values:
+    MINI_AUX_PWR: 0.75
+    MINI_RANGE_E_CUR: 93
+    MINI_RANGE_E_MAX: 148
+    MINI_RANGE_E_USE: 16.877
+    MINI_RANGE_F_CUR: 101
+  response: |-
+    660F1100F62D11103A2
+    660F12105C803E8FFFF
+    660F12241ED004BFFFF
+    660F1100F62D11103A2
+    660F12105C803F2FFFF
+    660F12241ED004BFFFF
+- expected_values:
+    MINI_AUX_PWR: 0.79
+    MINI_RANGE_E_CUR: 100
+    MINI_RANGE_E_MAX: 155
+    MINI_RANGE_E_USE: 15.623
+    MINI_RANGE_F_CUR: 105
+  response: |-
+    660F1100F62D11103E8
+    660F121060E041AFFFF
+    660F1223D07004FFFFF
+    660F10562D1070107
+    660F1100F62D11103E8
+    660F121060E041AFFFF
+    660F1223D07004FFFFF
+    660F10562D1126C6C
+    660F1100B62D10D0000
+    660F121AEF00000AEF0
+- expected_values:
     MINI_AUX_PWR: 0.28
     MINI_RANGE_E_CUR: 104
     MINI_RANGE_E_MAX: 158
@@ -206,42 +498,42 @@ test_cases:
     660F121062C0410FFFF
     660F1224306001CFFFF
 - expected_values:
-    MINI_AUX_PWR: 0.85
+    MINI_AUX_PWR: 1
     MINI_RANGE_E_CUR: 128
     MINI_RANGE_E_MAX: 128
-    MINI_RANGE_E_USE: 16.823
-    MINI_RANGE_F_CUR: 131
+    MINI_RANGE_E_USE: 15.981
+    MINI_RANGE_F_CUR: 128
   response: |-
     660F1100F62D1110500
-    660F1210500051EFFFF
-    660F12241B70055FFFF
+    660F12105000500FFFF
+    660F1223E6D0064FFFF
 - expected_values:
-    MINI_AUX_PWR: 0.73
-    MINI_RANGE_E_CUR: 133
-    MINI_RANGE_E_MAX: 149
-    MINI_RANGE_E_USE: 16.667
-    MINI_RANGE_F_CUR: 143
+    MINI_AUX_PWR: 0.95
+    MINI_RANGE_E_CUR: 132
+    MINI_RANGE_E_MAX: 132
+    MINI_RANGE_E_USE: 14.452
+    MINI_RANGE_F_CUR: 132
   response: |-
-    660F1100F62D1110532
-    660F12105D20596FFFF
-    660F122411B0049FFFF
+    660F1100F62D1110528
+    660F12105280528FFFF
+    660F1223874005FFFFF
 - expected_values:
-    MINI_AUX_PWR: 1.1
-    MINI_RANGE_E_CUR: 139
-    MINI_RANGE_E_MAX: 139
-    MINI_RANGE_E_USE: 17.587
-    MINI_RANGE_F_CUR: 180
+    MINI_AUX_PWR: 0.89
+    MINI_RANGE_E_CUR: 157
+    MINI_RANGE_E_MAX: 157
+    MINI_RANGE_E_USE: 15.628
+    MINI_RANGE_F_CUR: 194
   response: |-
-    660F1100F62D111056E
-    660F121056E0708FFFF
-    660F12244B3006EFFFF
+    660F1100F62D1110622
+    660F12106220794FFFF
+    660F1223D0C0059FFFF
 - expected_values:
-    MINI_AUX_PWR: 0.91
-    MINI_RANGE_E_CUR: 144
-    MINI_RANGE_E_MAX: 153
-    MINI_RANGE_E_USE: 15.85
-    MINI_RANGE_F_CUR: 144
+    MINI_AUX_PWR: 0.98
+    MINI_RANGE_E_CUR: 181
+    MINI_RANGE_E_MAX: 181
+    MINI_RANGE_E_USE: 14.475
+    MINI_RANGE_F_CUR: 181
   response: |-
-    660F1100F62D11105A0
-    660F12105FA05A0FFFF
-    660F1223DEA005BFFFF
+    660F1100F62D1110712
+    660F12107120712FFFF
+    660F122388B0062FFFF
