--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,4 +1,4 @@
-model_year: 2022
+model_year: 2021
 supported_commands_by_ecu:
   "6F1":
   - 6F1.607.226335|e=07,fc=1:MINI_HVBAT_SOH
@@ -10,7 +10,7 @@ supported_commands_by_ecu:
   - 6F1.607.22DFA0|e=07,fc=1:MINI_HVBAT_C_CAP_AVG,MINI_HVBAT_C_CAP_MAX,MINI_HVBAT_C_CAP_MIN,MINI_HVBAT_C_OCV_AVG,MINI_HVBAT_C_OCV_MAX,MINI_HVBAT_C_OCV_MIN,MINI_HVBAT_C_RES_FACTOR_AVG,MINI_HVBAT_C_RES_FACTOR_MAX,MINI_HVBAT_C_RES_FACTOR_MIN,MINI_HVBAT_C_SOC_AVG,MINI_HVBAT_C_SOC_MAX,MINI_HVBAT_C_SOC_MIN,MINI_HVBAT_C_TEMP_AVG,MINI_HVBAT_C_TEMP_MAX,MINI_HVBAT_C_TEMP_MIN,MINI_HVBAT_C_V_AVG,MINI_HVBAT_C_V_MAX,MINI_HVBAT_C_V_MIN,MINI_HVBAT_IMPEDANCE_ALPHA
   - 6F1.61A.22DE00|e=1A,fc=1:MINI_HVBAT_CHG_CON,MINI_HVBAT_CHG_CON_EXT,MINI_HVBAT_CHG_RDY,MINI_HVBAT_HVPM_MIN_SOC,MINI_HVBAT_HVPM_SOC
   - 6F1.629.22DBE4|e=29,fc=1:MINI_FL_SPD,MINI_FR_SPD,MINI_RL_SPD,MINI_RR_SPD
-  - 6F1.656.22DCDD|e=56,fc=1:MINI_CENTRAL_LOCK,MINI_DOOR_DRIVER,MINI_DOOR_DRIVER_REAR,MINI_DOOR_PASSENGER,MINI_DOOR_PASSENGER_REAR,MINI_HOOD,MINI_REAR_WINDOW,MINI_TRUNK
+  - 6F1.640.221700
   - 6F1.660.22D107|e=60,fc=1:MINI_VSS
   - 6F1.660.22D10D|e=60,fc=1:MINI_ODO1,MINI_ODO2
   - 6F1.660.22D111|e=60,fc=1:MINI_AUX_PWR,MINI_RANGE_E_CUR,MINI_RANGE_E_MAX,MINI_RANGE_E_USE,MINI_RANGE_F_CUR,MINI_RANGE_F_MAX
@@ -27,9 +27,12 @@ unsupported_commands_by_ecu:
   - 6F1.618.22DA22|e=18,fc=1:MINI_TQ_CNVRT_LOCKUP
   - 6F1.618.22DA23|e=18,fc=1:MINI_ODO_LOWRES
   - 6F1.618.22DA25|e=18,fc=1:MINI_EOT
+  - 6F1.618.22DA28
   - 6F1.618.22DA2A|e=18,fc=1:MINI_TQ_CNVRT_RPM,MINI_TRANS_SHAFT_RPM
   - 6F1.618.22DA2E|e=18,fc=1:MINI_GEAR,MINI_GEAR_SHIFT
   - 6F1.618.22DA37|e=18,fc=1:MINI_TIME_D,MINI_TIME_M,MINI_TIME_S
   - 6F1.619.22DB32|e=19,fc=1:MINI_AXLE_FRONT_ACTUAL_TORQUE,MINI_AXLE_FRONT_SETPOINT_TORQUE
+  - 6F1.619.22DFE7
+  - 6F1.656.22DCDD|e=56,fc=1:MINI_CENTRAL_LOCK,MINI_DOOR_DRIVER,MINI_DOOR_DRIVER_REAR,MINI_DOOR_PASSENGER,MINI_DOOR_PASSENGER_REAR,MINI_HOOD,MINI_REAR_WINDOW,MINI_TRUNK
   - 6F1.660.22420C|e=60,fc=1:MINI_RANGE,MINI_RANGE_COMF,MINI_RANGE_ECO
   - 6F1.663.22D031|e=63,fc=1:MINI_GEAR_V2
