--- a/tests/test_cases/2022/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -11,6 +11,16 @@ test_cases:
     629F122000000000000
     629F1230064646464FF
 - expected_values:
+    MINI_FL_SPD: 0
+    MINI_FR_SPD: 0
+    MINI_RL_SPD: 0
+    MINI_RR_SPD: 0
+  response: |-
+    629F1101662DBE40000
+    629F121000000000000
+    629F122000003030303
+    629F1230064646464FF
+- expected_values:
     MINI_FL_SPD: 8.86
     MINI_FR_SPD: 8.97
     MINI_RL_SPD: 8.87
