--- a/tests/test_cases/2022/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 6F1.660.22D10D|e=60,fc=1
 test_cases:
 - expected_values:
+    MINI_ODO1: 40994
+    MINI_ODO2: 40994
+  response: |-
+    660F1100B62D10D0000
+    660F121A0220000A022
+- expected_values:
     MINI_ODO1: 74837
     MINI_ODO2: 74837
   response: |-
