Update command data for MINI/Cooper

--- a/tests/test_cases/2021/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -27,6 +27,18 @@ test_cases:
 - expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 46.6
+  response: |-
+    61AF1101C62DE0001D2
+    61AF121170000010100
+    61AF1225B0A2C07D005
+    61AF123AA0120000D0D
+    61AF124B7013905A8FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 0
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 47.2
