Update command data for MINI/Cooper

--- a/tests/test_cases/2021/commands/6F1.607.22DDC0|e=07,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.607.22DDC0|e=07,fc=1.yaml
@@ -1,11 +1,11 @@
 command_id: 6F1.607.22DDC0|e=07,fc=1
 test_cases:
 - expected_values:
-    MINI_HVBAT_CT_MAX: 20.52
-    MINI_HVBAT_CT_MIN: 18.97
+    MINI_HVBAT_CT_MAX: 19.96
+    MINI_HVBAT_CT_MIN: 18.96
   response: |-
-    607F1100962DDC00769
-    607F121080407C7FFFF
+    607F1100962DDC00768
+    607F12107CC07A6FFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 20.16
     MINI_HVBAT_CT_MIN: 18.98
@@ -13,17 +13,23 @@ test_cases:
     607F1100962DDC0076A
     607F12107E007C3FFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 20.99
+    MINI_HVBAT_CT_MAX: 19.07
     MINI_HVBAT_CT_MIN: 18.99
   response: |-
     607F1100962DDC0076B
-    607F121083307A5FFFF
+    607F1210773076CFFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 19.99
+    MINI_HVBAT_CT_MIN: 18.99
+  response: |-
+    607F1100962DDC0076B
+    607F12107CF07B4FFFF
+- expected_values:
+    MINI_HVBAT_CT_MAX: 19
     MINI_HVBAT_CT_MIN: 19
   response: |-
     607F1100962DDC0076C
-    607F12107CF07C7FFFF
+    607F121076C076CFFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 20.63
     MINI_HVBAT_CT_MIN: 19
@@ -31,11 +37,11 @@ test_cases:
     607F1100962DDC0076C
     607F121080F07CFFFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 20.96
-    MINI_HVBAT_CT_MIN: 19.96
+    MINI_HVBAT_CT_MAX: 19.5
+    MINI_HVBAT_CT_MIN: 19.02
   response: |-
-    607F1100962DDC007CC
-    607F12108300800FFFF
+    607F1100962DDC0076E
+    607F121079E0770FFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 24.02
     MINI_HVBAT_CT_MIN: 23.03
