--- a/tests/test_cases/2021/commands/6F1.607.22DD68|e=07,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.607.22DD68|e=07,fc=1.yaml
@@ -1,8 +1,11 @@
 command_id: 6F1.607.22DD68|e=07,fc=1
 test_cases:
 - expected_values:
-    MINI_HVBAT_VOLT: 339.87
-  response: 607F10562DD6884C3
+    MINI_HVBAT_VOLT: 318.89
+  response: 607F10562DD687C91
+- expected_values:
+    MINI_HVBAT_VOLT: 338.54
+  response: 607F10562DD68843E
 - expected_values:
     MINI_HVBAT_VOLT: 371.19
   response: 607F10562DD6890FF
@@ -10,5 +13,5 @@ test_cases:
     MINI_HVBAT_VOLT: 373.76
   response: 607F10562DD689200
 - expected_values:
-    MINI_HVBAT_VOLT: 400.23
-  response: 607F10562DD689C57
+    MINI_HVBAT_VOLT: 399.38
+  response: 607F10562DD689C02
