Update command data for MINI/Cooper

--- a/tests/test_cases/2022/commands/6F1.607.22DDC0|e=07,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.607.22DDC0|e=07,fc=1.yaml
@@ -1,23 +1,35 @@
 command_id: 6F1.607.22DDC0|e=07,fc=1
 test_cases:
 - expected_values:
-    MINI_HVBAT_CT_MAX: 22
-    MINI_HVBAT_CT_MIN: 22
+    MINI_HVBAT_CT_MAX: 18.96
+    MINI_HVBAT_CT_MIN: 17.96
   response: |-
-    607F1100962DDC00898
-    607F12108980898FFFF
+    607F1100962DDC00704
+    607F12107680745FFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 32.99
-    MINI_HVBAT_CT_MIN: 29.99
+    MINI_HVBAT_CT_MAX: 18.98
+    MINI_HVBAT_CT_MIN: 17.98
   response: |-
-    607F1100962DDC00BB7
-    607F1210CE30C6FFFFF
+    607F1100962DDC00706
+    607F121076A075FFFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 33.04
-    MINI_HVBAT_CT_MIN: 30.04
+    MINI_HVBAT_CT_MAX: 18.99
+    MINI_HVBAT_CT_MIN: 18
   response: |-
-    607F1100962DDC00BBC
-    607F1210CE80C70FFFF
+    607F1100962DDC00708
+    607F121076B0710FFFF
+- expected_values:
+    MINI_HVBAT_CT_MAX: 19.03
+    MINI_HVBAT_CT_MIN: 18.03
+  response: |-
+    607F1100962DDC0070B
+    607F121076F0758FFFF
+- expected_values:
+    MINI_HVBAT_CT_MAX: 19.04
+    MINI_HVBAT_CT_MIN: 18.04
+  response: |-
+    607F1100962DDC0070C
+    607F12107700715FFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 33.1
     MINI_HVBAT_CT_MIN: 30.1
