--- a/tests/test_cases/2022/commands/6F1.660.22D107|e=60,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.660.22D107|e=60,fc=1.yaml
@@ -4,8 +4,11 @@ test_cases:
     MINI_VSS: 0
   response: 660F10562D1070000
 - expected_values:
-    MINI_VSS: 23.4
-  response: 660F10562D10700EA
+    MINI_VSS: 24.8
+  response: 660F10562D10700F8
 - expected_values:
-    MINI_VSS: 59.2
-  response: 660F10562D1070250
+    MINI_VSS: 42.4
+  response: 660F10562D10701A8
+- expected_values:
+    MINI_VSS: 53
+  response: 660F10562D1070212
