Update command data for MINI/Cooper

--- a/tests/test_cases/2022/commands/6F1.607.22DD69|e=07,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.607.22DD69|e=07,fc=1.yaml
@@ -13,17 +13,23 @@ test_cases:
     607F1100762DD690000
     607F12115CFFFFFFFFF
 - expected_values:
+    MINI_HVBAT_C: -51.81
+    MINI_HVBAT_CURR: 10000
+  response: |-
+    607F1100762DD69FFFF
+    607F121EBC3FFFFFFFF
+- expected_values:
     MINI_HVBAT_C: -30.67
     MINI_HVBAT_CURR: 10000
   response: |-
     607F1100762DD69FFFF
     607F121F405FFFFFFFF
 - expected_values:
-    MINI_HVBAT_C: -22.55
+    MINI_HVBAT_C: -28.79
     MINI_HVBAT_CURR: 10000
   response: |-
     607F1100762DD69FFFF
-    607F121F731FFFFFFFF
+    607F121F4C1FFFFFFFF
 - expected_values:
     MINI_HVBAT_C: -0.59
     MINI_HVBAT_CURR: 10000
