Update command data for MINI/Cooper

--- a/tests/test_cases/2022/commands/6F1.607.22DFA0|e=07,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.607.22DFA0|e=07,fc=1.yaml
@@ -256,6 +256,34 @@ test_cases:
     MINI_HVBAT_C_CAP_AVG: 94.6
     MINI_HVBAT_C_CAP_MAX: 95.7
     MINI_HVBAT_C_CAP_MIN: 93.23
+    MINI_HVBAT_C_OCV_AVG: 3.9892
+    MINI_HVBAT_C_OCV_MAX: 3.992
+    MINI_HVBAT_C_OCV_MIN: 3.987
+    MINI_HVBAT_C_RES_FACTOR_AVG: 1.2533
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 77.71
+    MINI_HVBAT_C_SOC_MAX: 78.68
+    MINI_HVBAT_C_SOC_MIN: 76.65
+    MINI_HVBAT_C_TEMP_AVG: 15.74
+    MINI_HVBAT_C_TEMP_MAX: 16.02
+    MINI_HVBAT_C_TEMP_MIN: 15.03
+    MINI_HVBAT_C_V_AVG: 3.9233
+    MINI_HVBAT_C_V_MAX: 3.9323
+    MINI_HVBAT_C_V_MIN: 3.9147
+    MINI_HVBAT_IMPEDANCE_ALPHA: 1.2533
+  response: |-
+    607F1102962DFA0246B
+    607F121256224F498EB
+    607F122999B994105DF
+    607F12306420626FFFF
+    607F124FFFF30F51DF1
+    607F1251EBC1E5B9BBE
+    607F1269BF09BD430F5
+- expected_values:
+    MINI_HVBAT_C_CAP_AVG: 94.6
+    MINI_HVBAT_C_CAP_MAX: 95.7
+    MINI_HVBAT_C_CAP_MIN: 93.23
     MINI_HVBAT_C_OCV_AVG: 4.0816
     MINI_HVBAT_C_OCV_MAX: 4.085
     MINI_HVBAT_C_OCV_MIN: 4.079
@@ -284,30 +312,30 @@ test_cases:
     MINI_HVBAT_C_CAP_AVG: 94.6
     MINI_HVBAT_C_CAP_MAX: 95.7
     MINI_HVBAT_C_CAP_MIN: 93.23
-    MINI_HVBAT_C_OCV_AVG: 6.5535
-    MINI_HVBAT_C_OCV_MAX: 6.5535
-    MINI_HVBAT_C_OCV_MIN: 6.5535
-    MINI_HVBAT_C_RES_FACTOR_AVG: 1.307
+    MINI_HVBAT_C_OCV_AVG: 3.9892
+    MINI_HVBAT_C_OCV_MAX: 3.992
+    MINI_HVBAT_C_OCV_MIN: 3.987
+    MINI_HVBAT_C_RES_FACTOR_AVG: 1.2559
     MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
     MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
-    MINI_HVBAT_C_SOC_AVG: 82.25
-    MINI_HVBAT_C_SOC_MAX: 83.24
-    MINI_HVBAT_C_SOC_MIN: 81.14
-    MINI_HVBAT_C_TEMP_AVG: 18.25
-    MINI_HVBAT_C_TEMP_MAX: 18.99
-    MINI_HVBAT_C_TEMP_MIN: 16.99
-    MINI_HVBAT_C_V_AVG: 3.9527
-    MINI_HVBAT_C_V_MAX: 3.9659
-    MINI_HVBAT_C_V_MIN: 3.9373
-    MINI_HVBAT_IMPEDANCE_ALPHA: 1.307
+    MINI_HVBAT_C_SOC_AVG: 77.96
+    MINI_HVBAT_C_SOC_MAX: 78.94
+    MINI_HVBAT_C_SOC_MIN: 76.9
+    MINI_HVBAT_C_TEMP_AVG: 15.68
+    MINI_HVBAT_C_TEMP_MAX: 15.99
+    MINI_HVBAT_C_TEMP_MIN: 15.05
+    MINI_HVBAT_C_V_AVG: 3.9603
+    MINI_HVBAT_C_V_MAX: 3.9648
+    MINI_HVBAT_C_V_MIN: 3.9559
+    MINI_HVBAT_IMPEDANCE_ALPHA: 1.2559
   response: |-
     607F1102962DFA0246B
-    607F121256224F499CD
-    607F1229AEB9A6706A3
-    607F123076B0721FFFF
-    607F124FFFF330E1FB2
-    607F12520842021FFFF
-    607F126FFFFFFFF330E
+    607F121256224F49A87
+    607F1229AE09AB305E1
+    607F123063F0620FFFF
+    607F124FFFF310F1E0A
+    607F1251ED61E749BBE
+    607F1269BF09BD4310F
 - expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.6
     MINI_HVBAT_C_CAP_MAX: 95.7
