--- a/tests/test_cases/2022/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -99,6 +99,30 @@ test_cases:
 - expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 76.8
+  response: |-
+    61AF1101C62DE000300
+    61AF121170000010100
+    61AF122540A2907D005
+    61AF123B40124000E0E
+    61AF124D2015D05BFFF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 76.8
+  response: |-
+    61AF1101C62DE000300
+    61AF121170000010100
+    61AF122540A2907D005
+    61AF123BE0126000E0E
+    61AF124D7016C05BFFF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 0
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 80.1
