--- a/tests/test_cases/2022/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -23,6 +23,13 @@ test_cases:
     607F1100962DDBC02C1
     607F12103C10073FFFF
 - expected_values:
+    MINI_HVBAT_SOC: 75.6
+    MINI_HVBAT_SOC_MAX: 96
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC02F4
+    607F12103C00073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 76.7
     MINI_HVBAT_SOC_MAX: 95.9
     MINI_HVBAT_SOC_MIN: 11.5
@@ -30,9 +37,9 @@ test_cases:
     607F1100962DDBC02FF
     607F12103BF0073FFFF
 - expected_values:
-    MINI_HVBAT_SOC: 79
+    MINI_HVBAT_SOC: 76.8
     MINI_HVBAT_SOC_MAX: 96
     MINI_HVBAT_SOC_MIN: 11.5
   response: |-
-    607F1100962DDBC0316
+    607F1100962DDBC0300
     607F12103C00073FFFF
