Update command data for MINI/Cooper

--- a/tests/test_cases/2021/commands/6F1.607.22DDC0|e=07,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.607.22DDC0|e=07,fc=1.yaml
@@ -1,11 +1,17 @@
 command_id: 6F1.607.22DDC0|e=07,fc=1
 test_cases:
 - expected_values:
-    MINI_HVBAT_CT_MAX: 18.96
-    MINI_HVBAT_CT_MIN: 16.96
+    MINI_HVBAT_CT_MAX: 18.82
+    MINI_HVBAT_CT_MIN: 16.95
   response: |-
-    607F1100962DDC006A0
-    607F121076806F8FFFF
+    607F1100962DDC0069F
+    607F121075A06F7FFFF
+- expected_values:
+    MINI_HVBAT_CT_MAX: 18.95
+    MINI_HVBAT_CT_MIN: 16.95
+  response: |-
+    607F1100962DDC0069F
+    607F121076706FFFFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 18.99
     MINI_HVBAT_CT_MIN: 16.99
@@ -19,11 +25,11 @@ test_cases:
     607F1100962DDC006A4
     607F12107070703FFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 19.01
-    MINI_HVBAT_CT_MIN: 17.01
+    MINI_HVBAT_CT_MAX: 18
+    MINI_HVBAT_CT_MIN: 17.02
   response: |-
-    607F1100962DDC006A5
-    607F121076D070FFFFF
+    607F1100962DDC006A6
+    607F121070806DEFFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 19.03
     MINI_HVBAT_CT_MIN: 17.03
