Update command data for MINI/Cooper

--- a/tests/test_cases/2022/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -1,6 +1,16 @@
 command_id: 6F1.660.22D111|e=60,fc=1
 test_cases:
 - expected_values:
+    MINI_AUX_PWR: 0.74
+    MINI_RANGE_E_CUR: 66
+    MINI_RANGE_E_MAX: 173
+    MINI_RANGE_E_USE: 15.364
+    MINI_RANGE_F_CUR: 66
+  response: |-
+    660F1100F62D1110294
+    660F12106C20294FFFF
+    660F1223C04004AFFFF
+- expected_values:
     MINI_AUX_PWR: 0.72
     MINI_RANGE_E_CUR: 68
     MINI_RANGE_E_MAX: 171
@@ -11,15 +21,15 @@ test_cases:
     660F12106AE02A8FFFF
     660F1223D370048FFFF
 - expected_values:
-    MINI_AUX_PWR: 0.72
+    MINI_AUX_PWR: 0.76
     MINI_RANGE_E_CUR: 68
     MINI_RANGE_E_MAX: 175
-    MINI_RANGE_E_USE: 15.255
+    MINI_RANGE_E_USE: 15.223
     MINI_RANGE_F_CUR: 68
   response: |-
     660F1100F62D11102A8
     660F12106D602A8FFFF
-    660F1223B970048FFFF
+    660F1223B77004CFFFF
 - expected_values:
     MINI_AUX_PWR: 0.72
     MINI_RANGE_E_CUR: 69
