Update command data for MINI/Cooper

--- a/tests/test_cases/2022/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -41,6 +41,16 @@ test_cases:
     629F122032001010101
     629F1230164646464FF
 - expected_values:
+    MINI_FL_SPD: 23.2
+    MINI_FR_SPD: 23.17
+    MINI_RL_SPD: 23.42
+    MINI_RR_SPD: 23.45
+  response: |-
+    629F1101662DBE40910
+    629F121090D09260929
+    629F12208FC01010101
+    629F1230164646464FF
+- expected_values:
     MINI_FL_SPD: 40.71
     MINI_FR_SPD: 40.57
     MINI_RL_SPD: 40.84
@@ -51,14 +61,14 @@ test_cases:
     629F1220FA001010101
     629F1230164646464FF
 - expected_values:
-    MINI_FL_SPD: 46.29
-    MINI_FR_SPD: 46.02
-    MINI_RL_SPD: 46.26
-    MINI_RR_SPD: 46.18
+    MINI_FL_SPD: 40.79
+    MINI_FR_SPD: 40.73
+    MINI_RL_SPD: 40.94
+    MINI_RR_SPD: 40.87
   response: |-
-    629F1101662DBE41215
-    629F12111FA1212120A
-    629F12211F801010101
+    629F1101662DBE40FEF
+    629F1210FE90FFE0FF7
+    629F1220FA001010101
     629F1230164646464FF
 - expected_values:
     MINI_FL_SPD: 83.73
