--- a/tests/test_cases/2022/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -23,6 +23,13 @@ test_cases:
     607F1100962DDBC01FF
     607F12103C10073FFFF
 - expected_values:
+    MINI_HVBAT_SOC: 51.2
+    MINI_HVBAT_SOC_MAX: 96.1
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC0200
+    607F12103C10073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 56.9
     MINI_HVBAT_SOC_MAX: 95.9
     MINI_HVBAT_SOC_MIN: 11.5
