--- a/tests/test_cases/2023/commands/6F1.607.22DFA0|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DFA0|e=07,fc=1.yaml
@@ -1,6 +1,90 @@
 command_id: 6F1.607.22DFA0|e=07,fc=1
 test_cases:
 - expected_values:
+    MINI_HVBAT_C_CAP_AVG: 95.83
+    MINI_HVBAT_C_CAP_MAX: 96.82
+    MINI_HVBAT_C_CAP_MIN: 93.89
+    MINI_HVBAT_C_OCV_AVG: 4.0561
+    MINI_HVBAT_C_OCV_MAX: 4.059
+    MINI_HVBAT_C_OCV_MIN: 4.051
+    MINI_HVBAT_C_RES_FACTOR_AVG: 1.0552
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 85.47
+    MINI_HVBAT_C_SOC_MAX: 86.51
+    MINI_HVBAT_C_SOC_MIN: 83.33
+    MINI_HVBAT_C_TEMP_AVG: 13.62
+    MINI_HVBAT_C_TEMP_MAX: 14
+    MINI_HVBAT_C_TEMP_MIN: 13
+    MINI_HVBAT_C_V_AVG: 4.035
+    MINI_HVBAT_C_V_MAX: 4.038
+    MINI_HVBAT_C_V_MIN: 4.031
+    MINI_HVBAT_IMPEDANCE_ALPHA: 1.0552
+  response: |-
+    607F1102962DFA024AD
+    607F12125D2256F9D76
+    607F1229DBC9D9E0514
+    607F12305780552FFFF
+    607F124FFFF2938208D
+    607F12521CB21639E3E
+    607F1269E8E9E712938
+- expected_values:
+    MINI_HVBAT_C_CAP_AVG: 95.83
+    MINI_HVBAT_C_CAP_MAX: 96.82
+    MINI_HVBAT_C_CAP_MIN: 93.89
+    MINI_HVBAT_C_OCV_AVG: 4.0561
+    MINI_HVBAT_C_OCV_MAX: 4.059
+    MINI_HVBAT_C_OCV_MIN: 4.051
+    MINI_HVBAT_C_RES_FACTOR_AVG: 1.0552
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 85.41
+    MINI_HVBAT_C_SOC_MAX: 86.44
+    MINI_HVBAT_C_SOC_MIN: 83.27
+    MINI_HVBAT_C_TEMP_AVG: 13.62
+    MINI_HVBAT_C_TEMP_MAX: 14
+    MINI_HVBAT_C_TEMP_MIN: 13
+    MINI_HVBAT_C_V_AVG: 4.0491
+    MINI_HVBAT_C_V_MAX: 4.0526
+    MINI_HVBAT_C_V_MIN: 4.045
+    MINI_HVBAT_IMPEDANCE_ALPHA: 1.0552
+  response: |-
+    607F1102962DFA024AD
+    607F12125D2256F9E02
+    607F1229E4E9E2B0514
+    607F12305780552FFFF
+    607F124FFFF29382087
+    607F12521C4215D9E3E
+    607F1269E8E9E712938
+- expected_values:
+    MINI_HVBAT_C_CAP_AVG: 95.83
+    MINI_HVBAT_C_CAP_MAX: 96.82
+    MINI_HVBAT_C_CAP_MIN: 93.89
+    MINI_HVBAT_C_OCV_AVG: 4.0561
+    MINI_HVBAT_C_OCV_MAX: 4.059
+    MINI_HVBAT_C_OCV_MIN: 4.051
+    MINI_HVBAT_C_RES_FACTOR_AVG: 1.0552
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 85.4
+    MINI_HVBAT_C_SOC_MAX: 86.44
+    MINI_HVBAT_C_SOC_MIN: 83.27
+    MINI_HVBAT_C_TEMP_AVG: 13.62
+    MINI_HVBAT_C_TEMP_MAX: 14
+    MINI_HVBAT_C_TEMP_MIN: 13
+    MINI_HVBAT_C_V_AVG: 4.0504
+    MINI_HVBAT_C_V_MAX: 4.0533
+    MINI_HVBAT_C_V_MIN: 4.046
+    MINI_HVBAT_IMPEDANCE_ALPHA: 6.5535
+  response: |-
+    607F1102962DFA024AD
+    607F12125D2256F9E0C
+    607F1229E559E380514
+    607F12305780552FFFF
+    607F124FFFF29382087
+    607F12521C4215C9E3E
+    607F1269E8E9E71FFFF
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 95.92
     MINI_HVBAT_C_CAP_MAX: 96.9
     MINI_HVBAT_C_CAP_MIN: 93.97
