--- a/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -20,3 +20,13 @@ test_cases:
     660F1100F62D11104F6
     660F121061804F6FFFF
     660F1224140004FFFFF
+- expected_values:
+    MINI_AUX_PWR: 0.73
+    MINI_RANGE_E_CUR: 141
+    MINI_RANGE_E_MAX: 168
+    MINI_RANGE_E_USE: 15.841
+    MINI_RANGE_F_CUR: 141
+  response: |-
+    660F1100F62D1110582
+    660F12106900582FFFF
+    660F1223DE10049FFFF
