--- a/tests/test_cases/2023/commands/6F1.607.22DD69|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DD69|e=07,fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 6F1.607.22DD69|e=07,fc=1
 test_cases:
 - expected_values:
+    MINI_HVBAT_C: 0
+    MINI_HVBAT_CURR: 0
+  response: |-
+    607F1100762DD690000
+    607F1210000FFFFFFFF
+- expected_values:
     MINI_HVBAT_C: -19.5
     MINI_HVBAT_CURR: 10000
   response: |-
@@ -19,8 +25,20 @@ test_cases:
     607F1100762DD69FFFF
     607F121F93EFFFFFFFF
 - expected_values:
+    MINI_HVBAT_C: -15.5
+    MINI_HVBAT_CURR: 10000
+  response: |-
+    607F1100762DD69FFFF
+    607F121F9F2FFFFFFFF
+- expected_values:
     MINI_HVBAT_C: -2.39
     MINI_HVBAT_CURR: 10000
   response: |-
     607F1100762DD69FFFF
     607F121FF11FFFFFFFF
+- expected_values:
+    MINI_HVBAT_C: -0.02
+    MINI_HVBAT_CURR: 10000
+  response: |-
+    607F1100762DD69FFFF
+    607F121FFFEFFFFFFFF
