--- a/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -28,3 +28,10 @@ test_cases:
   response: |-
     607F1100962DDBC0337
     607F12103CB0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 85.1
+    MINI_HVBAT_SOC_MAX: 96.7
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC0353
+    607F12103C70073FFFF
