--- a/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -36,3 +36,39 @@ test_cases:
     61AF122520A2A07D005
     61AF123BE011B000C0F
     61AF12411010805BDFF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 83.2
+  response: |-
+    61AF1101C62DE000340
+    61AF121170000000000
+    61AF122000A2907D005
+    61AF123000000000000
+    61AF12470001404F9FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 83.2
+  response: |-
+    61AF1101C62DE000340
+    61AF121170000000000
+    61AF122000A2907D005
+    61AF12300000000000F
+    61AF1242F00160551FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 83.3
+  response: |-
+    61AF1101C62DE000341
+    61AF121170000010100
+    61AF122520A2907D005
+    61AF123BE0125000E0F
+    61AF12420016405BDFF
