--- a/tests/test_cases/2023/commands/6F1.660.22D107|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D107|e=60,fc=1.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     MINI_VSS: 0
   response: 660F10562D1070000
+- expected_values:
+    MINI_VSS: 0.2
+  response: 660F10562D1070002
