--- a/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -12,3 +12,9 @@ test_cases:
   response: |-
     660F1100B62D10D0000
     660F1217E5C00007E5C
+- expected_values:
+    MINI_ODO1: 32427
+    MINI_ODO2: 32427
+  response: |-
+    660F1100B62D10D0000
+    660F1217EAB00007EAB
