--- a/tests/test_cases/2023/commands/6F1.660.22D112|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D112|e=60,fc=1.yaml
@@ -4,5 +4,11 @@ test_cases:
     MINI_AAT: 12.5
   response: 660F10562D1126969
 - expected_values:
+    MINI_AAT: 13.5
+  response: 660F10562D1126B6B
+- expected_values:
+    MINI_AAT: 13.5
+  response: 660F10562D1126B6C
+- expected_values:
     MINI_AAT: 14
   response: 660F10562D1126C6D
