Update command data for MINI/Cooper

--- a/tests/test_cases/2020/commands/6F1.607.22DDC0|e=07,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.607.22DDC0|e=07,fc=1.yaml
@@ -118,17 +118,23 @@ test_cases:
     607F1100962DDC005DC
     607F1210640062FFFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 9
-    MINI_HVBAT_CT_MIN: 6.82
+    MINI_HVBAT_CT_MAX: 6.99
+    MINI_HVBAT_CT_MIN: 5.99
   response: |-
-    607F1100962DDC002AA
-    607F12103840300FFFF
+    607F1100962DDC00257
+    607F12102BB02B2FFFF
 - expected_values:
-    MINI_HVBAT_CT_MAX: 8.99
-    MINI_HVBAT_CT_MIN: 6.85
+    MINI_HVBAT_CT_MAX: 7
+    MINI_HVBAT_CT_MIN: 6
   response: |-
-    607F1100962DDC002AD
-    607F121038302FEFFFF
+    607F1100962DDC00258
+    607F12102BC02A7FFFF
+- expected_values:
+    MINI_HVBAT_CT_MAX: 7.01
+    MINI_HVBAT_CT_MIN: 6.01
+  response: |-
+    607F1100962DDC00259
+    607F12102BD02B0FFFF
 - expected_values:
     MINI_HVBAT_CT_MAX: 15
     MINI_HVBAT_CT_MIN: 10
