--- a/tests/test_cases/2020/commands/6F1.607.22DFA0|e=07,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.607.22DFA0|e=07,fc=1.yaml
@@ -2450,6 +2450,34 @@ test_cases:
     607F1251A8B19FAFFFF
     607F126FFFFFFFF2553
 - expected_values:
+    MINI_HVBAT_C_CAP_AVG: 94.42
+    MINI_HVBAT_C_CAP_MAX: 95.94
+    MINI_HVBAT_C_CAP_MIN: 91.9
+    MINI_HVBAT_C_OCV_AVG: 3.893
+    MINI_HVBAT_C_OCV_MAX: 3.896
+    MINI_HVBAT_C_OCV_MIN: 3.89
+    MINI_HVBAT_C_RES_FACTOR_AVG: 0.9701
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 64.97
+    MINI_HVBAT_C_SOC_MAX: 66.41
+    MINI_HVBAT_C_SOC_MIN: 62.84
+    MINI_HVBAT_C_TEMP_AVG: 6.86
+    MINI_HVBAT_C_TEMP_MAX: 7.02
+    MINI_HVBAT_C_TEMP_MIN: 6.02
+    MINI_HVBAT_C_V_AVG: 3.8475
+    MINI_HVBAT_C_V_MAX: 3.8544
+    MINI_HVBAT_C_V_MIN: 3.8356
+    MINI_HVBAT_IMPEDANCE_ALPHA: 0.9701
+  response: |-
+    607F1102962DFA023E6
+    607F121257A24E295D4
+    607F1229690964B025A
+    607F12302BE02AEFFFF
+    607F124FFFF25E5188C
+    607F12519F1196197F4
+    607F1269830981225E5
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.25
     MINI_HVBAT_C_CAP_MAX: 95.8
     MINI_HVBAT_C_CAP_MIN: 91.91
